@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-10-28T00:38:41Z",
-  "count_outdated" : 506,
-  "uniques_outdated" : 333,
+  "timestamp" : "2024-11-04T00:38:08Z",
+  "count_outdated" : 508,
+  "uniques_outdated" : 335,
   "count" : 509,
   "uniques" : 336,
   "clones" : [
-    {
-      "timestamp": "2024-10-20T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
-    },
     {
       "timestamp": "2024-10-27T00:00:00Z",
       "count": 1,
